--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello</h1>
     
+
+
+
+
+
+<script>
+    // tuong tac voi cac file html, de doi file html load xong het moi tuong tac 
+    // co the su dung nhieu the script 
+    // Output 
+    console.log("Hello World");
+    console.log("Võ Thanh Toàn");
+    // console.log: câu lệnh in ra màn hình ở tab console 
+    // ; dùng để kết thúc câu lệnh
+    /** comment nhiều dòng dùng /**
+     * 
+     * 
+     * 
+    */
+//**  Khai báo biến (variable) )
+console.log("Võ Thanh Toàn")
+
+//**Cú pháp khai báo biến (syntax)
+
+var fullName;  //khai báo biến có tên là fullname 
+console.log(fullName); //??? undefined
+
+
+
+fullName = "Võ Thanh Toàn"; //Gán giá trị cho biến fullname
+console.log (fullName);
+console.log (fullName);
+console.log (fullName);
+console.log (fullName);
+
+// vua khai bao bien vua gan gia tri
+var name = 'BBBBBB'; //khai bao bien name va gan gia tri khoi tao cho no la "BBBBB"
+
+//** Kieu du lieu : gia tri cua kieu du lieu (value)
+// string: "vo thanh toan", 'Nguyen van B', "12345"
+//Number
+//Boolean
+
+//** Quy tac khi dat ten bien
+//camalCase: su dung nhieu nhat trong JS
+//snake_case: full_name
+//IN_HOA: MOT_NAM_CO_BAO_NHIEU_THANG; Bien hang so, khong bao gio thay doi
+
+// Tranh 1 so tinh huong nhu ben duoi 
+// var 2name; 
+// var full name; 
+// var var = 10;
+// var if = 10;
+// var else = 10;
+// var for = 10;
+//var full-name;
+//----------------------------------------------------------
+
+//** Kieu du lieu number 
+var age = 30; //tao bien age co kieu du lieu la number;
+console.log('[1]' ,age);
+// 2025
+age = 31; //phép gán lại giá trị cho biến age;
+console.log('[2]' ,age);
+// 2026
+age = 32; // gán lại giá trị của biến age; gán bao nhiêu lần cũng được
+console.log('[3]' ,age);
+// 2027
+age = 33;
+console.log('[4]' ,age);
+
+
+
+
+</script>
+
+
+<script src="./buoi 1/index.js"></script>
 </body>
 </html>
