--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <h1 id="hello"> Hello World</h1>
 
@@ -14,103 +20,167 @@
     <h3 id="h3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, quasi.</h3>
     <h4 id="h4">Cyber Soft</h4>
     <div>
-        <i id="bat" style ="display: none;" class="fa-solid fa-lightbulb"></i>
-        <i id ="tat" class="fa-regular fa-lightbulb"></i>
-        <button onclick="handleToggle()"  id="toggle">toggle</button>
+        <!-- inline function  -->
+        <i id="bat" style="display: none;" class="fa-solid fa-lightbulb"></i>
+        <i id="tat" class="fa-regular fa-lightbulb"></i>
+        <button onclick="handleToggle()" id="toggle">toggle</button>
     </div>
     <div>
         <p id="count">0</p>
-        <button onclick="handleButton()" id="tang">+</button>
-        <button onclick="handleButton2()" id="tru">-</button>
+        <button id="tang">+</button>
+        <!-- onclick="handleButton2()"  -->
+        <button id="giam">-</button>
     </div>
     <div>
-        <div id="color" style ="width: 100px; height: 100px;
+        <div id="color" style="width: 100px; height: 100px;
         background-color: black;"></div>
-        <button onclick="changecolor('red')" >red</button>
+        <button onclick="changecolor('red')">red</button>
         <button onclick="changecolor('green')">green</button>
         <button onclick="changecolor('blue')">blue</button>
         <button onclick="changecolor('black')">black</button>
     </div>
+    <br>
+    <div class="container">
+        <h2>Buổi 3</h2>
+        <div class="mb-3 ">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+
+        <div class="mt-3">
+            <button id="get" class="btn btn-primary">Get</button>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2>Chẵn lẻ</h2>
+        <div class="mb-3 ">
+            <label for="chan-le" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="chan-le" placeholder="nhap so">
+        </div>
+
+        <div class="mt-3">
+            <button class="btn btn-primary" id="bt-1">Submit</button>
+            <p id="kq-1" class="mt-3 alert alert-primary">ket qua</p>
+
+        </div>
+
+    </div>
+
+
+    <h2>Xếp loại</h2>
+    <div class="mb-3 ">
+        <label for="toan" class="form-label">Toán</label>
+        <input type="number" class="form-control" id="toan">
+    </div>
+    <div class="mb-3 ">
+        <label for="ly" class="form-label">Lý</label>
+        <input type="number" class="form-control" id="ly">
+    </div>
+    <div class="mb-3 ">
+        <label for="hoa" class="form-label">Hóa</label>
+        <input type="number" class="form-control" id="hoa">
+    </div>
+
+    <div class="mt-3">
+        <button class="btn btn-primary" id="bt-2">Xếp loại</button>
+        <p id="dtb" class="mt-3 alert alert-primary">
+            Điểm trung bình:
+        </p>
+        <p id="hoc-luc" class="mt-3 alert alert-primary">
+            ket qua
+        </p>
+    </div>
+  
+
+
+
+
+    </div>
 
 
 
 
 
-<script>
-    // tuong tac voi cac file html, de doi file html load xong het moi tuong tac 
-    // co the su dung nhieu the script 
-    // Output 
-    console.log("Hello World");
-    console.log("Võ Thanh Toàn");
-    // console.log: câu lệnh in ra màn hình ở tab console 
-    // ; dùng để kết thúc câu lệnh
-    /** comment nhiều dòng dùng /**
-     * 
-     * 
-     * 
-    */
-//**  Khai báo biến (variable) )
-console.log("Võ Thanh Toàn")
+    <script>
+        // tuong tac voi cac file html, de doi file html load xong het moi tuong tac 
+        // co the su dung nhieu the script 
+        // Output 
+        console.log("Hello World");
+        console.log("Võ Thanh Toàn");
+        // console.log: câu lệnh in ra màn hình ở tab console 
+        // ; dùng để kết thúc câu lệnh
+        /** comment nhiều dòng dùng /**
+         * 
+         * 
+         * 
+        */
+        //**  Khai báo biến (variable) )
+        console.log("Võ Thanh Toàn")
 
-//**Cú pháp khai báo biến (syntax)
+        //**Cú pháp khai báo biến (syntax)
 
-var fullName;  //khai báo biến có tên là fullname 
-console.log(fullName); //??? undefined
-
-
-
-fullName = "Võ Thanh Toàn"; //Gán giá trị cho biến fullname
-console.log (fullName);
-console.log (fullName);
-console.log (fullName);
-console.log (fullName);
-
-// vua khai bao bien vua gan gia tri
-var name = 'BBBBBB'; //khai bao bien name va gan gia tri khoi tao cho no la "BBBBB"
-
-//** Kieu du lieu : gia tri cua kieu du lieu (value)
-// string: "vo thanh toan", 'Nguyen van B', "12345"
-//Number
-//Boolean
-
-//** Quy tac khi dat ten bien
-//camalCase: su dung nhieu nhat trong JS
-//snake_case: full_name
-//IN_HOA: MOT_NAM_CO_BAO_NHIEU_THANG; Bien hang so, khong bao gio thay doi
-
-// Tranh 1 so tinh huong nhu ben duoi 
-// var 2name; 
-// var full name; 
-// var var = 10;
-// var if = 10;
-// var else = 10;
-// var for = 10;
-//var full-name;
-//----------------------------------------------------------
-
-//** Kieu du lieu number 
-var age = 30; //tao bien age co kieu du lieu la number;
-console.log('[1]' ,age);
-// 2025
-age = 31; //phép gán lại giá trị cho biến age;
-console.log('[2]' ,age);
-// 2026
-age = 32; // gán lại giá trị của biến age; gán bao nhiêu lần cũng được
-console.log('[3]' ,age);
-// 2027
-age = 33;
-console.log('[4]' ,age);
-
-//** gan gia tri cua bien age cho bien age2
-var age2 = age;
+        var fullName;  //khai báo biến có tên là fullname 
+        console.log(fullName); //??? undefined
 
 
 
+        fullName = "Võ Thanh Toàn"; //Gán giá trị cho biến fullname
+        console.log(fullName);
+        console.log(fullName);
+        console.log(fullName);
+        console.log(fullName);
 
-</script>
+        // vua khai bao bien vua gan gia tri
+        var name = 'BBBBBB'; //khai bao bien name va gan gia tri khoi tao cho no la "BBBBB"
+
+        //** Kieu du lieu : gia tri cua kieu du lieu (value)
+        // string: "vo thanh toan", 'Nguyen van B', "12345"
+        //Number
+        //Boolean
+
+        //** Quy tac khi dat ten bien
+        //camalCase: su dung nhieu nhat trong JS
+        //snake_case: full_name
+        //IN_HOA: MOT_NAM_CO_BAO_NHIEU_THANG; Bien hang so, khong bao gio thay doi
+
+        // Tranh 1 so tinh huong nhu ben duoi 
+        // var 2name; 
+        // var full name; 
+        // var var = 10;
+        // var if = 10;
+        // var else = 10;
+        // var for = 10;
+        //var full-name;
+        //----------------------------------------------------------
+
+        //** Kieu du lieu number 
+        var age = 30; //tao bien age co kieu du lieu la number;
+        console.log('[1]', age);
+        // 2025
+        age = 31; //phép gán lại giá trị cho biến age;
+        console.log('[2]', age);
+        // 2026
+        age = 32; // gán lại giá trị của biến age; gán bao nhiêu lần cũng được
+        console.log('[3]', age);
+        // 2027
+        age = 33;
+        console.log('[4]', age);
+
+        //** gan gia tri cua bien age cho bien age2
+        var age2 = age;
 
 
-<!-- <script src="./buoi 1/index.js"></script> -->
-<script src="./buoi2/index.js"></script>
+
+
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <!-- <script src="./buoi 1/index.js"></script> -->
+    <!-- <script src="./buoi2/index.js"></script> -->
+    <script src="buoi 3/index.js"></script>
 </body>
+
 </html>
